# lawful-good

./: README.md  main.py  pyproject.toml  requirements.txt
lawful_good/: lawful_good.py
lg/: amazon.py  generate_image.py  hf_data.jsonl  lambda.py  lawful_good.py  notify_parents.py  prompts.py  tools.py
lg/logs/: 2024-12-12T23-26-50+00-00_lawful-good_UeSjGtZvwkX7he5givovep.eval  2024-12-16T15-06-07+00-00_lawful-good_4pptCCm9ufytg9qPCVZfAP.eval  2024-12-16T15-20-44+00-00_lawful-good_VNCdGJGiDqzSEe9v9artx2.eval
